--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^1.6.22",
+    "@next/mdx": "^11.1.2",
+    "@theme-ui/presets": "^0.11.3",
+    "gray-matter": "^4.0.3",
     "next": "11.1.2",
+    "next-mdx-remote": "^3.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "theme-ui": "^0.11.3"
   },
   "devDependencies": {
     "@types/react": "17.0.24",
